use list getFirst() and getLast()