@@ -86,7 +86,7 @@ public class ExpressionJSONCreator implements ScratchVisitor, TextToSpeechExtens
             jsonString.append(finishedJSONStrings.get(i)).append(",");
         }
         if (!finishedJSONStrings.isEmpty()) {
-            jsonString.append(finishedJSONStrings.get(finishedJSONStrings.size() - 1));
+            jsonString.append(finishedJSONStrings.getLast());
         }
         return new IdJsonStringTuple(topExpressionId, jsonString.toString());
     }
