@@ -110,7 +110,7 @@ public class DominatorTreeTest implements JsonTest {
         CFGNode entry = cfg.getEntryNode();
         CFGNode greenFlag = cfg.getSuccessors(entry).iterator().next();
         CFGNode ifelse = dt.getSuccessors(greenFlag).stream().filter(t -> t.getASTNode() instanceof IfElseStmt).findFirst().get();
-        CFGNode move1 = dt.getSuccessors(ifelse).stream().filter(t -> t.getASTNode() instanceof MoveSteps).toList().get(0);
+        CFGNode move1 = dt.getSuccessors(ifelse).stream().filter(t -> t.getASTNode() instanceof MoveSteps).toList().getFirst();
         CFGNode move2 = dt.getSuccessors(ifelse).stream().filter(t -> t.getASTNode() instanceof MoveSteps).toList().get(1);
         CFGNode exit = cfg.getExitNode();
 
@@ -132,7 +132,7 @@ public class DominatorTreeTest implements JsonTest {
         CFGNode entry = cfg.getEntryNode();
         CFGNode greenFlag = dt.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof GreenFlag).findFirst().get();
         CFGNode move1 = dt.getSuccessors(greenFlag).iterator().next();
-        CFGNode keyPressed = dt.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof KeyPressed).toList().get(0);
+        CFGNode keyPressed = dt.getSuccessors(entry).stream().filter(t -> t.getASTNode() instanceof KeyPressed).toList().getFirst();
         CFGNode move2 = dt.getSuccessors(keyPressed).iterator().next();
         CFGNode exit = cfg.getExitNode();
 
