@@ -42,13 +42,13 @@ public class IfIfElseToConjunctionTest implements JsonTest {
         IfIfElseToConjunctionFinder finder = new IfIfElseToConjunctionFinder();
         List<Refactoring> refactorings = finder.check(program);
         assertThat(refactorings).hasSize(1);
-        assertThat(refactorings.get(0)).isInstanceOf(IfIfElseToConjunction.class);
+        assertThat(refactorings.getFirst()).isInstanceOf(IfIfElseToConjunction.class);
     }
 
     @Test
     public void testIfElseToConjunctionRefactoring() throws ParsingException, IOException {
         Program program = getAST("src/test/fixtures/refactoring/ifIfElseToConjunction.json");
-        Script script = program.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().get(0);
+        Script script = program.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().getFirst();
         StmtList stmtList = script.getStmtList();
         IfThenStmt if1 = (IfThenStmt) stmtList.getStatement(0);
         IfElseStmt if2 = (IfElseStmt) if1.getThenStmts().getStatement(0);
@@ -56,7 +56,7 @@ public class IfIfElseToConjunctionTest implements JsonTest {
         IfIfElseToConjunction refactoring = new IfIfElseToConjunction(if1);
         Program refactored = refactoring.apply(program);
 
-        Script refactoredScript = refactored.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().get(0);
+        Script refactoredScript = refactored.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().getFirst();
         StmtList refactoredStmtList = refactoredScript.getStmtList();
         assertThat(refactoredStmtList.getNumberOfStatements()).isEqualTo(2);
 
