@@ -41,13 +41,13 @@ public class LoopUnrollingTest implements JsonTest {
         LoopUnrollingFinder finder = new LoopUnrollingFinder();
         List<Refactoring> refactorings = finder.check(program);
         assertThat(refactorings).hasSize(1);
-        assertThat(refactorings.get(0)).isInstanceOf(LoopUnrolling.class);
+        assertThat(refactorings.getFirst()).isInstanceOf(LoopUnrolling.class);
     }
 
     @Test
     public void testLoopUnrollingRefactoring() throws ParsingException, IOException {
         Program program = getAST("src/test/fixtures/refactoring/unrollableLoop.json");
-        Script script = program.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().get(0);
+        Script script = program.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().getFirst();
         StmtList stmtList = script.getStmtList();
         RepeatTimesStmt loop = (RepeatTimesStmt) stmtList.getStmts().stream().filter(s -> s instanceof RepeatTimesStmt).findFirst().get();
         int times = (int)((NumberLiteral) loop.getTimes()).getValue();
@@ -55,7 +55,7 @@ public class LoopUnrollingTest implements JsonTest {
         LoopUnrolling refactoring = new LoopUnrolling(loop, times);
         Program refactored = refactoring.apply(program);
 
-        Script refactoredScript = refactored.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().get(0);
+        Script refactoredScript = refactored.getActorDefinitionList().getDefinitions().get(1).getScripts().getScriptList().getFirst();
         StmtList refactoredStmtList = refactoredScript.getStmtList();
         assertThat(refactoredStmtList.getNumberOfStatements()).isEqualTo(stmtList.getNumberOfStatements() - 1 + times * loop.getStmtList().getNumberOfStatements());
     }
